--- a/src/responsive.css
+++ b/src/responsive.css
@@ -114,6 +114,13 @@
     display: flex;
     flex-direction: column;
   }
+
+  /* Warehouse Page */
+
+  .item-detail-modal-content {
+    width: 52%;
+    max-width: 52%;
+  }
 }
 
 @media screen and (max-width: 1070px) {
@@ -448,6 +455,15 @@
     padding: 9px;
   }
 
+  .item-detail-modal-content {
+    width: 60%;
+    max-width: 60%;
+}
+
+.item-detail-modal-body .modal-label, .item-detail-modal-body .modal-value {
+  font-size: 17px;
+}
+
   /* Warehouse history page */
 
   .historyTable td:nth-of-type(9),
@@ -489,6 +505,15 @@
   .filter-item-modal button {
     padding: 6px;
   }
+
+  .item-detail-modal-content {
+    width: 62%;
+    max-width: 62%;
+}
+.submit-btn {
+  padding: 9px;
+  font-size: 17px;
+}
 }
 
 @media screen and (max-width: 810px) {
@@ -727,6 +752,13 @@
   .import-form input {
     font-size: 13px;
   }
+  .item-detail-modal-header h2 {
+    font-size: 24px;
+  }
+
+  .item-detail-close-button {
+    font-size: 34px;
+  }
 
   /* Employee Page */
 
@@ -811,6 +843,10 @@
   .historyImportTable td {
     padding: 14px 5px !important;
   }
+  .item-detail-modal-content {
+    width: 68%;
+    max-width: 68%;
+}
 }
 
 @media screen and (max-width: 700px) {
@@ -876,6 +912,16 @@
   .historyImportTable th:nth-of-type(5),
   .historyImportTable td:nth-of-type(5) {
     display: none;
+  }
+
+  /* Login page */
+  .login-page {
+    height: 423px;
+    width: 440px;
+    padding: 43px 66px;
+  }
+  .login-mail-password div label input:not(.remember-me input) {
+    width: 275px;
   }
 }
 
@@ -965,7 +1011,7 @@
   }
 
   .passportImage label>span {
-font-size: 15px;
+    font-size: 15px;
   }
 
   /* Employee page */
@@ -1012,6 +1058,19 @@ font-size: 15px;
   .import-modal-content {
     max-height: 80vh;
   }
+
+  .warehouse-item-detail-grid {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+  }
+  .submit-btn {
+    padding: 8px;
+    font-size: 16px;
+}
+.item-detail-modal-footer svg {
+  font-size: 19px;
+}
+
   /* Warehouse history page */
 
   .historyTable td:nth-of-type(2),
@@ -1080,6 +1139,16 @@ font-size: 15px;
   .task-modal-content {
     max-width: 70%;
   }
+
+  /* Login page */
+  .login-page {
+    height: 414px;
+    width: 375px;
+    padding: 43px 56px;
+}
+.login-mail-password div label input:not(.remember-me input) {
+  width: 228px;
+}
 }
 
 @media screen and (max-width: 550px) {
@@ -1309,6 +1378,16 @@ font-size: 15px;
     padding: 14px 15px 20px 15px;
   }
 
+  .item-detail-modal-header h2 {
+    font-size: 23px;
+}
+.item-detail-modal-body .modal-label, .item-detail-modal-body .modal-value {
+  font-size: 16px;
+}
+.item-detail-modal-body .modal-row {
+  margin: 10px 0 10px 0;
+}
+
   /* Warehouse history page */
 
   .historyTable td:nth-of-type(2),
@@ -1343,11 +1422,16 @@ font-size: 15px;
         font-size: 15px;
     }
     .upload-container label {
-height: 60px;
-}
-.upload-icon img {
-  width: 25px;
-}
+      height: 60px;
+    }
+    .upload-icon img {
+      width: 25px;
+    }
+    .submit-btn {
+      padding: 9px;
+      margin-top: 0;
+    }
+    
 
   /* Warehouse Import History Table  */
 
@@ -1516,6 +1600,19 @@ height: 60px;
     width: 93%;
     border: 0;
   }
+  .item-detail-modal-header h2 {
+    font-size: 22px;
+    margin: 0;
+  }
+  .item-detail-modal-header {
+    margin-bottom: 5px;
+  }
+  .item-detail-close-button {
+    font-size: 33px;
+}
+.submit-btn {
+  padding: 8px;
+}
 
   /* Warehouse history page */
 
@@ -1549,6 +1646,13 @@ height: 60px;
   .historyTable th:last-of-type {
     padding: 12px 7px 12px 0 !important;
   }
+
+  /* Login page */
+  
+  .login-page {
+    width: 318px;
+    padding: 43px 28px;
+}
 }
 
 @media screen and (max-width: 412px) {
